scripts/ingress/traefik/traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v2.0
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        volumeMounts:
        #- name: config
        #  mountPath: /etc/traefik/traefik.toml
        #  subPath: traefik.toml
        - name: socket
          mountPath: /var/run/docker.sock
        args:
        - --api.insecure=true
        - --providers.docker
       #args:
       # - --web
       # - --web.address=:8081
       # - --kubernetes
       # - --logLevel=INFO
      volumes:
      #- name: config
      #  configMap:
      #    name: traefiktoml
      - name: socket
        hostPath:
          path: /var/run/docker.sock
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
  type: NodePort
