scripts/ingress/traefik/ingress-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-jackhttpd
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: myapp.jackxia.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jackhttpd
          servicePort: 80
